--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Akveo",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.897.0",
     "app-root-path": "^2.2.1",
     "body-parser": "^1.18.3",
     "config": "^3.0.1",
